# Airbnb-Analysis-API

./: .env  Airbnb-Analysis.csv  README.md  database_connection.py  main.py  mongodb_workout.ipynb  prepare_data_for_powerbi.py  pyproject.toml  request_frame.py
