
[tool.poetry]
name = "Airbnb-Analysis"
version = "0.1.0"
description = "To describe airbnb anlasysis insights"
license = "MIT"
authors = ["Navaneethan <naveenkrishnan840@gmail.com>"]
maintainers = ["Navaneethan naveenkrishnan840@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "4.8.0"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
uvicorn = "^0.20.0"
pymongoarrow = "1.4.0"
pandas = "2.2.2"
dotenv = "0.0.5"